@@ -14,6 +14,10 @@ class ApplicationController < ActionController::Base
     end
   end
 
+  def parse_date(date_string)
+    date_string.to_s.split('/').last.size == 2 ? Date.strptime(date_string, "%m/%d/%y") : Date.strptime(date_string, "%m/%d/%Y") rescue ""
+  end
+
   protected
 
   def check_system_admin
